WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25184
Mac Chromium selected text color incorrect
https://bugs.webkit.org/show_bug.cgi?id=25184
Summary
Mac Chromium selected text color incorrect
Rohit Rao
Reported
2009-04-14 09:57:24 PDT
Selected text turns white on Mac Chromium. It should match the behavior of Safari. Patch coming.
Attachments
fix selected text color for Mac Chromium
(1.29 KB, patch)
2009-04-14 10:01 PDT
,
Rohit Rao
no flags
Details
Formatted Diff
Diff
fix selected text color for Mac Chromium
(1.30 KB, patch)
2009-04-14 10:07 PDT
,
Rohit Rao
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Rohit Rao
Comment 1
2009-04-14 10:01:55 PDT
Created
attachment 29470
[details]
fix selected text color for Mac Chromium One layout test (fast/js/date-DST-time-cusps.html) failed on my machine with and without my patch, but it looked timezone related. All the other tests passed.
mitz
Comment 2
2009-04-14 10:05:05 PDT
Comment on
attachment 29470
[details]
fix selected text color for Mac Chromium The patch looks fine but there are tabs in the Change Log
Rohit Rao
Comment 3
2009-04-14 10:07:04 PDT
Created
attachment 29472
[details]
fix selected text color for Mac Chromium Bah, a couple tabs snuck into the ChangeLog. Should be fixed now.
Dmitry Titov
Comment 4
2009-04-14 11:18:22 PDT
assigning to myself for landing
Dmitry Titov
Comment 5
2009-04-14 12:01:18 PDT
landed:
http://trac.webkit.org/changeset/42508
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug