2009-04-14  Rohit Rao  <rohitrao@google.com>

Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=25184
        Do not change the text color for selected text in Mac Chromium.

        * rendering/RenderThemeChromiumMac.h:
        (WebCore::RenderThemeChromiumMac::supportsSelectionForegroundColors):
        Now returns false, matching the behavior of Safari on Mac.

Canonical link: https://commits.webkit.org/34562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42508 268f45cc-cd09-0410-ab3c-d52691b4dbfc